--- a/js_modal/index.html
+++ b/js_modal/index.html
@@ -91,7 +91,7 @@
           <li>
             <p class="modal-options-select_item">create.modalInner</p>
             <p class="modal-options-details">
-              モーダルに必要な要素を自動 or 手動で生成または生成しない<br>
+              モーダルに必要な要素を自動・手動どちらで行うか<br>
               ※このプレビューでは [auto] 固定です
             </p>
             <!--
@@ -108,7 +108,7 @@
             <p class="modal-options-select_item">create.normalBtn</p>
             <p class="modal-options-details">
               <span class="modal-options-details-always-showed-block">
-                モーダルの下端のボタンを自動 or 手動で生成または生成しない<br>
+                モーダルの下端のボタンを自動・手動で生成または生成しない<br>
                 ※このプレビューでは [manual] は選べません
               </span>
               <span id="createNormalBtnNote" class="modal-options-details_note">
@@ -129,7 +129,7 @@
             <p class="modal-options-select_item">create.floatBtn</p>
             <p class="modal-options-details">
               <span class="modal-options-details-always-showed-block">
-                モーダルのフロートボタンを自動 or 手動で生成または生成しない<br>
+                モーダルのフロートボタンを自動・手動で生成または生成しない<br>
                 ※このプレビューでは [manual] は選べません
               </span>
               <span id="createFloatBtnNote" class="modal-options-details_note">
@@ -150,7 +150,7 @@
             <p class="modal-options-select_item">slide.use</p>
             <p class="modal-options-details">
               <span class="modal-options-details-always-showed-block">
-                モーダルにスライド機能を付与するか否か<br>
+                スライド機能を付与するか否か<br>
                 ※このプレビューでは [true] 固定です
               </span>
             </p>
@@ -164,7 +164,7 @@
             <p class="modal-options-select_item">slide.loop</p>
             <p class="modal-options-details">
               <span class="modal-options-details-always-showed-block">
-                モーダルのスライド切り替えをループさせるか否か
+                スライド切り替えをループさせるか否か
               </span>
             </p>
             <select id="slideLoop" class="modal-options-select" name="slide-loop" autocomplete="off">
@@ -177,7 +177,7 @@
             <p class="modal-options-select_item">scroll.scrollBar</p>
             <p class="modal-options-details">
               <span class="modal-options-details-always-showed-block">
-                モーダルの高さがブラウザの高さより高いときに<br>
+                モーダルの高さがブラウザの高さを超える場合に<br>
                 スクロールバーを表示する位置を指定する
               </span>
             </p>
